--- a/src/main/partials/geo-directive-map.tpl.html
+++ b/src/main/partials/geo-directive-map.tpl.html
@@ -1,2 +1,3 @@
-<div id="{{id}}_map" class="smallmap"></div>
-<div ng-transclude ></div>
+<div class="smallmap">
+    <div ng-transclude ></div>
+</div>
