Do not interpolate twice. Ng-style already does the string interpolation for css properties.

--- a/src/main/partials/geo-directive-map.tpl.html
+++ b/src/main/partials/geo-directive-map.tpl.html
@@ -1,3 +1,3 @@
-<div data-ng-style="{width: '{{width}}px', height: '{{height}}px'}">
+<div data-ng-style="{width:width, height:height}">
     <div ng-transclude ></div>
 </div>
